feat(ENG-95): update bank account details
